[gd_scene load_steps=6 format=3 uid="uid://barip612rmsxg"]

[ext_resource type="Script" path="res://scripts/context.gd" id="1_1xnfw"]
[ext_resource type="PackedScene" uid="uid://crfclhawc6v2j" path="res://scenes/background.tscn" id="1_uj00b"]
[ext_resource type="FontFile" uid="uid://cfbenm167udpo" path="res://assets/PublicPixel-z84yD.ttf" id="2_l1r15"]

[sub_resource type="Theme" id="Theme_r5eah"]
default_font = ExtResource("2_l1r15")
Button/colors/font_color = Color(0.92549, 0.854902, 0.866667, 1)
Label/constants/line_spacing = 15
Label/font_sizes/font_size = 18
Label/fonts/font = ExtResource("2_l1r15")

[sub_resource type="LabelSettings" id="LabelSettings_tqqxu"]
line_spacing = 15.0
font = ExtResource("2_l1r15")
font_size = 18

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1xnfw")

[node name="Background" parent="." instance=ExtResource("1_uj00b")]

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -403.0
offset_top = -215.0
offset_right = 404.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_r5eah")

[node name="Continue1" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -157.0
offset_top = -45.0
offset_right = -21.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_l1r15")
text = "Continue
"

[node name="Label1" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -393.5
offset_top = -44.0
offset_right = 393.5
offset_bottom = 44.0
grow_horizontal = 2
grow_vertical = 2
text = "Deep in the Dark Woods lies an old dungeon. 
This dungeon was once used as a prison 
during The Great War."
label_settings = SubResource("LabelSettings_tqqxu")

[node name="Continue2" type="Button" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -157.0
offset_top = -45.0
offset_right = -21.0
offset_bottom = -21.0
grow_horizontal = 0
grow_vertical = 0
text = "Continue"

[node name="Label2" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -378.0
offset_top = -42.0
offset_right = 378.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
text = "The royal historian recently ventured into
the dungeon in search of artifacts. He has 
yet to return."

[node name="Continue3" type="Button" parent="Panel"]
visible = false
layout_mode = 0
offset_left = 650.0
offset_top = 170.0
offset_right = 658.0
offset_bottom = 178.0
text = "Continue"

[node name="Label3" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -387.0
offset_top = -75.0
offset_right = 387.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
text = "King Sacarver has become very concerned. 
He has sent you to the dungeon to rescue
the royal historian. You must make your way 
through the dungeon and return with the 
historian."

[connection signal="pressed" from="Panel/Continue1" to="." method="_on_continue_1_pressed"]
[connection signal="pressed" from="Panel/Continue2" to="." method="_on_continue_2_pressed"]
[connection signal="pressed" from="Panel/Continue3" to="." method="_on_continue_3_pressed"]
